@@ -1,27 +1,40 @@
-package com.endesha360.SchoolManagementService.config;
+package com.endesha360.SystemAdminServices.config;
 
-import com.endesha360.SchoolManagementService.security.JwtAuthenticationFilter;
+import com.endesha360.SystemAdminServices.security.JwtAuthenticationEntryPoint;
+import com.endesha360.SystemAdminServices.security.JwtAuthenticationFilter;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
-    
+
+    @Autowired
+    private JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
-    
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
@@ -29,34 +42,28 @@ public class SecurityConfig {
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(authz -> authz
-                // Public endpoints
+                .requestMatchers("/api/admin/login").permitAll()
+                .requestMatchers("/api/admin/register").permitAll()
+                .requestMatchers("/api/auth/login").permitAll()  // Add this for flexibility
+                .requestMatchers("/api/auth/register").permitAll()  // Add this for flexibility
                 .requestMatchers("/actuator/**").permitAll()
                 .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                .requestMatchers("/api/debug/**").permitAll()  // Debug endpoints - remove in production
-                // SystemAdminServices integration endpoints
-                .requestMatchers("/api/schools/pending").permitAll()  // Get pending schools
-                .requestMatchers("/api/schools/all").permitAll()  // Get all schools
-                .requestMatchers("/api/schools/*/approve").permitAll()  // Approve school
-                .requestMatchers("/api/schools/*/reject").permitAll()  // Reject school
-                .requestMatchers("/api/schools/*").permitAll()  // Get school by ID
-                .requestMatchers("/api/schools/tenant/**").permitAll()  // Get school by tenant code
-                // Authenticated endpoints
-                .requestMatchers("/api/schools/register").authenticated()  // School registration
-                .requestMatchers("/api/schools/my-school").authenticated()  // Owner's school management
-                .requestMatchers("/api/schools/admin/**").hasRole("ADMIN")  // Admin endpoints
+                .requestMatchers("/api/admin/**").hasAnyRole("SUPER_ADMIN", "SYSTEM_ADMIN")
+                .requestMatchers("/api/schools/**").hasAnyRole("SUPER_ADMIN", "SYSTEM_ADMIN")
                 .anyRequest().authenticated()
             )
+            .exceptionHandling(ex -> ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-            
+
         return http.build();
     }
-    
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
